--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./product.html">Product</a>
@@ -178,7 +178,7 @@
         </div>
       </div>
       <div class="copyright-text mt-5 text-center">
-        ErrorShop is Designed by<a href="#" class="text-danger"> ErrorInterface</a> &copy; 2022 All Rights Reserved.
+        ErrorShop is Designed by<a href="https://www.github.com/errorinterface" class="text-primary"> ErrorInterface</a> &copy; 2022 All Rights Reserved.
       </div>
     </footer>
 
