--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/contact.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <title>Contact</title>
   </head>
   <body>
@@ -20,9 +21,61 @@
     </div>
     <!-- header part end -->
     <!-- main body part start -->
-    <div class="main-contact-body">
-      <p>Contact Part Here</p>
-    </div>
+
+    <section class="py-5" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="left-side">
+              <h1 class="heading">
+                Fill The From.<br />
+                It's Easy.
+              </h1>
+              <form action="#">
+                <div class="row">
+                  <div class="col-md-6">
+                    <input type="text" placeholder="First Name" />
+                  </div>
+                  <div class="col-md-6">
+                    <input type="text" placeholder="Last Name" />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <input type="email" placeholder="E-Mail" />
+                  </div>
+                  <div class="col-12">
+                    <textarea
+                      name="msg"
+                      id=""
+                      cols="30"
+                      rows="4"
+                      placeholder="Write You'r Important Massage"
+                    ></textarea>
+                  </div>
+                </div>
+
+                <button class="btn btn-primary mb-5" type="submit">
+                  Send Massage
+                </button>
+              </form>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h1 class="heading">Find Us</h1>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4348.041045813593!2d89.8596301007166!3d23.595289032334428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fe25479e3a1217%3A0xebc312dd42482de3!2sFaridpur%20Polytechnic%20Institute!5e0!3m2!1sen!2sbd!4v1653893046335!5m2!1sen!2sbd"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- main body part End -->
     <!-- footer part start -->
     <div class="about-footer">
