--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ErrorShop</title>
+    <title>Errorshop || All you need, We have</title>
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body onload="LoadingAnimation()">
@@ -24,7 +25,7 @@
       <!-- navbar Start  -->
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-              <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+              <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
                     <img class="menu-bar" src="img/menu.png" alt="">
@@ -33,16 +34,16 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./product.html">Product</a>
+                    <a class="nav-link" href="product.html">Product</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About</a>
+                    <a class="nav-link" href="about.html">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                   
                 </ul>
@@ -108,29 +109,29 @@
                       </div>
               </div>
           </div>
-          <!-- Header Part End  -->
-    </header>
+      </header>
+        <!-- Header Part End  -->
 
     <!-- Feature Section  -->
     <section class="feature py-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-3 text-center">
+          <div class="col-md-6 col-lg-3 text-center">
             <img class="feature-img" src="img/free-shipping.png" alt="">
-            <h3 class="lead">Free Shopping</h3>
+            <h3 class="lead">Free Shoping</h3>
             <p class="text-muted">Free Shipping on all over the Universe</p>
           </div>
-          <div class="col-md-3 text-center">
+          <div class="col-md-6 col-lg-3 text-center">
             <img class="feature-img" src="img/phone-call.png" alt="">
             <h3 class="lead">Support 24/7</h3>
             <p class="text-muted">Contact Us 24 hours a day, 7 days a week</p>
           </div>
-          <div class="col-md-3 text-center">
+          <div class="col-md-6 col-lg-3 text-center">
             <img class="feature-img" src="img/credit-card.png" alt="">
             <h3 class="lead">Payment Secure</h3>
             <p class="text-muted">We Ensure secure Payment</p>
           </div>
-          <div class="col-md-3 text-center">
+          <div class="col-md-6 col-lg-3 text-center">
             <img class="feature-img" src="img/return.png" alt="">
             <h3 class="lead">7 days Return</h3>
             <p class="text-muted">Simply return it within 7 days for an exchange</p>
@@ -143,21 +144,21 @@
     <footer class="py-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <h2> <img class="footer-logo" src="img/logo.png" alt=""> ERROR SHOP</h2>
-            <p> HVW6+4V9, BaitulAman, A.F. Mujibur Rahman (ICS) Sarani <br> Faridpur 7803</p>
+            <p> HVW6+4V9, Baitul Aman, A.F. Mujibur Rahman (ICS) Sarani <br> Faridpur 7803</p>
             <p><a href="tel: +8801911111111">+880 01911111111</a></p>
             <p><a href="mailto:errorinterface2022@gmail.com">errorinterface2022@gmail.com</a></p>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-6 col-lg-2">
             <h4>QUICK LINKS</h4>
             <ul>
-              <li><a href="./product.html">Product</a></li>
-              <li><a href="./about.html">About</a></li>
-              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="#">Product</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </div>
-          <div class="col-md-2">
+          <div class="col-md-6 col-lg-3">
             <h4>HELP</h4>
             <ul>
               <li><a href="#">Order Tracking</a></li>
@@ -166,7 +167,7 @@
               <li><a href="#">Terms and Condition</a></li>
             </ul>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-6 col-lg-3">
             <h4>STORE</h4>
             <ul>
               <li><a href="#">New</a></li>
@@ -177,8 +178,9 @@
           </div>
         </div>
       </div>
+
       <div class="copyright-text mt-5 text-center">
-        ErrorShop is Designed by<a href="https://www.github.com/errorinterface" class="text-primary"> ErrorInterface</a> &copy; 2022 All Rights Reserved.
+        ErrorShop is Designed by <a href="#" class="text-danger"> ErrorInterface </a> © 2022 All Rights Reserved. 
       </div>
     </footer>
 
@@ -195,7 +197,7 @@
         });
     });
     
-    function LoadingAnimation(){
+    const LoadingAnimation = () => {
       document.getElementById('loader').style.display = "none";
     }
     </script>
