--- a/about.html
+++ b/about.html
@@ -5,41 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/about.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/about.css"/>
     <title>About</title>
   </head>
   <body>
-    <!--About Header Start -->
-    <div class="about-header-upper">
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./product.html">Product</a></li>
-        <li><a href="./about.html" class="active">About</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-      </ul>
-    </div>
-    <div class="middle-part">
-      <div class="about-header-lower">
-        <p class="team-logo">
-          <a href="https://github.com/errorinterface">
-            <img src="./img/errorinterface-circle.png" alt="logo" />
-          </a>
-        </p>
-        <br />
-        <h1>
-          Error Interface <br />
-          Team
-        </h1>
-        <br />
-        <h4 class="text">
-          We are a Website Design Team from Faridpur Polytechnic Institute
-        </h4>
-      </div>
-      <!-- About Header Finished -->
+
+    <!-- navbar Start  -->
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+                <img class="menu-bar" src="img/menu.png" alt="">
+            </span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="product.html">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+              
+            </ul>
+            <div class="ml-auto">
+                <form action="">
+                    <div class="input-box">
+                        <input class="inp" type="text">
+                        <img class="search-icon" src="img/search.png" alt="">
+                    </div>
+                </form>
+            </div>
+        </div>
+      </nav>
+      <!-- navbar end  -->
+
+    
       <!-- About Body Start -->
       <div class="about-body">
-        <h1 align="center" class="body-header">Our Team Members</h1>
-        <div class="container">
+        <h1 class="body-header">Our Team Members</h1>
+        <div class="card-container">
           <!-- Mehedi Profile Design Start -->
           <div class="card">
             <div class="card-image">
@@ -179,15 +193,28 @@
       </div>
     </div>
     <!-- About Body Finished -->
+
+    <!-- About Middle start  -->
+    <div class="middle-part">
+      <div class="about-header-lower">
+        <p class="team-logo">
+          <a href="https://github.com/errorinterface">
+            <img src="./img/errorinterface-circle.png" alt="logo" />
+          </a>
+        </p>
+        <br />
+        <h1>
+          Error Interface Team
+        </h1>
+        <br />
+        <h4 class="text">
+          Web Designer Team from Faridpur Polytechnic Institute
+        </h4>
+      </div>
+    <!-- About Middle Finished  -->
+
     <!-- About Footer Start -->
     <div class="about-footer">
-      <div class="footer-menu">
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./product.html">Product</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-        </ul>
-      </div>
       <div class="footer-copyright">
         ErrorShop is Designed by
         <a href="https://github.com/errorinterface">ErrorInterface</a> &copy;
@@ -195,5 +222,7 @@
       </div>
     </div>
     <!-- About Footer End -->
+
+    <script src="js/bootstrap.bundle.js"></script>
   </body>
 </html>
